# musicdata-tools

./: .gitignore  README.md  aggprep.py  conda-lock.yml  dvc.yaml  environment.yml  file_name.parquet  import-mlhd.py  ingest.py  memory_limits.py  pixi.toml  prep.py  pyproject.toml
.dvc/: config
data/: .gitignore  prep_log.txt  rec-id-stats.parquet.dvc  release-id-stats.parquet.dvc  user-id-stats.parquet.dvc
datanalysis/: analysis.ipynb  analysis.py  memory_limits.py  summarizestats.py  summaryanalysis.ipynb
datanalysis/outputs/: .gitignore  gender_count.parquet.dvc  gender_count_active.parquet.dvc  genre_count.parquet.dvc  rating_count.parquet.dvc  release_count.parquet.dvc  type_count.parquet.dvc
musicdata/: dbutils.py  layout.py  mlhd.py  mlhd_prep.py  mlhd_prep_agg.py  musicbrainz.py  params.py  resources.py
notebooks/: memory_limits.py  mlhd_preprocess.ipynb  test.ipynb
source/: .gitignore  mlhdplus.dvc  musicbrainz.dvc
source/scripts/: generatemlhddb.py  models.py
sql/: mb_artist.sql  mb_recording.sql
