[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "musicdata-tools"
version = "2025.1"
description = "Import and integrate music data for recommender systems."
readme = "README.md"
requires-python = ">=3.11"
# no dependencies, those are in pixi.toml

[tool.setuptools.packages.find]
include = ["muisicdata*"]

[tool.pyright]
exclude = [".pixi/*"]
